--- a/.github/workflows/azure-login.yml
+++ b/.github/workflows/azure-login.yml
@@ -1,25 +1,15 @@
 name: Run Azure Login with OIDC
 on: workflow_dispatch
 
-permissions:
-      id-token: write
-      contents: read
-jobs:
+jobs: 
+
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Az CLI login'
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }} 
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        #environment: 'AzureStack'
 
-      - name: 'Run az commands'
-        run: |
-          az account show
-          az group list
-      - name: 'Run az commands'
-        run: |
-          az account show
-          az group list
+    - run: |
+        az group list 
