--- a/.github/workflows/vm-setup.yml
+++ b/.github/workflows/vm-setup.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }} 
 
-      # - name: Create resource group
-      #   run: |
-      #         az group create \
-      #           -l $LOCATION \
-      #           -n $RESOURCE_GROUP_NAME \
+      - name: Create resource group
+        run: |
+              az group create \
+                -l $LOCATION \
+                -n $RESOURCE_GROUP_NAME \
 
       - name: Create virtual machine
         run: |
