adding deployment template and extending workflow aks

--- a/.github/workflows/cluster-creation.yml
+++ b/.github/workflows/cluster-creation.yml
@@ -43,5 +43,6 @@ jobs:
                 --name $CONTAINER_REG_NAME \
                 --sku Basic
 
-    # deploy-pods:
-            #runs-on: ubuntu-22.04
+    # - name: apply deployment
+    #    run: |
+    #            kubectl apply deployment/test-depl.yml  
