--- a/deployment/test-depl.yml
+++ b/deployment/test-depl.yml
@@ -1,3 +1,12 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+    name: waveapp-namespace
+spec:
+    finalizers:
+      - kubernetes
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
