--- a/wave-heroku/requirements.txt
+++ b/wave-heroku/requirements.txt
@@ -1,9 +1,11 @@
-certifi==2021.10.8
+#certifi==2021.10.8
+certifi=2022.12.07
 click==7.1.2
 h11==0.13.0
 h2o-wave==0.20.0
 httpcore==0.12.3
-httpx==0.16.1
+httpx >=0.23.0
+#httpx==0.16.1
 idna==3.3
 rfc3986==1.5.0
 sniffio==1.2.0
