--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -6,8 +6,8 @@ on: workflow_dispatch
 jobs:
   build-image:
     runs-on: self-hosted
-    container: 
-     image: docker
+#     container: 
+#      image: docker
     env:
         RESOURCE_GROUP_NAME: BorisDundakov_RG_FinalProject
         CONTAINER_REG_NAME: webapp
