--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,2 @@
 sonar.projectKey=BorisDundakov-FinalProject
-sonar.login="admin"
-sonae.password="admin1"
+sonar.login=sqp_db125f6d5847705f4f22010d93e3345eff7d776f
