--- a/.github/workflows/actions-exporter.yml
+++ b/.github/workflows/actions-exporter.yml
@@ -7,8 +7,9 @@ on:
 jobs:
   build:
     name: Run github-actions-exporter
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
+      
       - name: Checkout current repository
         uses: actions/checkout@v3
         with:
@@ -19,6 +20,7 @@ jobs:
         run: |
           cd github-actions-exporter
           docker build -t spendeskplatform/github-actions-exporter:latest .
+      
       - name: Run GitHub Actions Exporter
         run: |
           docker run -d \
