--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,11 @@
 name: Build
 
 on:
-  push:
+  #TODO: Make it on push only!!
+  #push:
   workflow_dispatch:
     
-
-
+    
 jobs:
   build:
     name: Build
