--- a/.github/workflows/actions-exporter.yml
+++ b/.github/workflows/actions-exporter.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Run GitHub Actions Exporter
         run: |
           docker run -d \
-            --name github-actions-exporter-unique-2 \
+            --name github-actions-exporter-unique-6 \
             -p 9999:9999 \
             -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
-            -e GITHUB_REPOSITORY=${{ github.repository }} \
+            -e GITHUB_REPOSITORY=${{ github.event.repository.full_name }} \
             spendeskplatform/github-actions-exporter:latest
 
 
