--- a/.github/workflows/actions-exporter.yml
+++ b/.github/workflows/actions-exporter.yml
@@ -26,14 +26,22 @@ jobs:
       - name: Run GitHub Actions Exporter
         run: |
           docker run -d \
-            --name github-actions-exporter-unique-15 \
+            --name github-actions-exporter-unique-17 \
             -p 9999:9999 \
             -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
             -e GITHUB_REPOSITORY=${{ github.event.repository.full_name }} \
+            spendeskplatform/github-actions-exporter:v1.8.1
     
       - name: Pointless echo
         run: |
           echo ${{ github.event.repository.full_name }}
+      
+      - name: Expose workflow run status
+        run: |
+            echo "github_workflow_run_status $(echo ${{ job.status }} | tr '[:upper:]' '[:lower:]') $(date +%s)" | \
+              docker run --rm -i --network=host --entrypoint=/bin/sh -e "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" \
+              spendeskplatform/github-actions-exporter:latest -c 'echo "$0" | curl --data-binary @- http://localhost:9999/metrics/job/github_workflow_run_status/instance/$GITHUB_REPOSITORY'
+
 
 
 
