--- a/.github/workflows/actions-exp-2.yml
+++ b/.github/workflows/actions-exp-2.yml
@@ -8,7 +8,7 @@ jobs:
     name: Run github-actions-exporter
     runs-on: self-hosted
     container:
-      image: spendeskplatform/github-actions-exporter:latest
+      image: spendeskplatform/github-actions-exporter:v1.8.1
       
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
