--- a/.github/workflows/actions-exp-2.yml
+++ b/.github/workflows/actions-exp-2.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Wait for the server to start
         run: sleep 5
       
-      - name: Check the metrics endpoint
-        run: curl -s localhost:9999/metrics
+      # - name: Check the metrics endpoint
+      #   run: curl -s localhost:9999/metrics
 
       # - name: Build GitHub Actions Exporter Docker image
       #   run: |
