--- a/sonarqube/Dockerfile
+++ b/sonarqube/Dockerfile
@@ -1,7 +1,17 @@
+# FROM sonarqube:latest
+
+# # Download the Sonar Prometheus Exporter extension and place it in the plugins directory
+# ADD https://github.com/SonarQubeCommunity/sonar-prometheus-exporter/releases/download/1.0.0-SNAPSHOT/sonar-prometheus-exporter-1.0.0-SNAPSHOT.jar /opt/sonarqube/extensions/plugins/
+
+# # Expose the Prometheus metrics endpoint
+# EXPOSE 9000
+
+
+
 FROM sonarqube:latest
 
 # Download the Sonar Prometheus Exporter extension and place it in the plugins directory
-ADD https://github.com/SonarQubeCommunity/sonar-prometheus-exporter/releases/download/1.0.0-SNAPSHOT/sonar-prometheus-exporter-1.0.0-SNAPSHOT.jar /opt/sonarqube/extensions/plugins/
+ADD sonar-prometheus-exporter-1.0.0-SNAPSHOT.jar /opt/sonarqube/extensions/plugins/
 
 # Expose the Prometheus metrics endpoint
 EXPOSE 9000
