--- a/.github/workflows/actions-exporter.yml
+++ b/.github/workflows/actions-exporter.yml
@@ -1,7 +1,7 @@
 name: Actions-exporter job
 
 on:
-  #push:
+  push:
   workflow_dispatch:
     
 jobs:
@@ -15,23 +15,19 @@ jobs:
         with:
           repository: Spendesk/github-actions-exporter
           path: github-actions-exporter
-        env:
-          DATA_SOURCE: '{"owners": ["bosch-ecs-career-camp"], "repositories": ["BorisDundakov-FinalProject"]}'
-
       
       - name: Build GitHub Actions Exporter Docker image
         run: |
           cd github-actions-exporter
-          docker build -t spendeskplatform/github-actions-exporter:v1.8.1 .
+          docker build -t spendeskplatform/github-actions-exporter:latest .
       
       
       #TODO: Delete prevous containers to avoid name duplication
       - name: Run GitHub Actions Exporter
         run: |
           docker run -d \
-            --name github-actions-exporter-unique-33 \
+            --name github-actions-exporter-unique-27 \
             -p 9999:9999 \
             -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
             -e GITHUB_REPOSITORY=${{ github.event.repository.full_name }} \
-            -e DATA_SOURCE="$DATA_SOURCE" \
             spendeskplatform/github-actions-exporter:v1.8.1
