--- a/.github/workflows/images-build.yml
+++ b/.github/workflows/images-build.yml
@@ -1,6 +1,6 @@
 #Configure The CI/CD Pipeline to automate the build/validate/deploy h2o-wave docker image steps.
 
-name: Sonarqube and H2o wave images build and push
+name: Sonarqube and H2o images build
 on: workflow_dispatch
 
 jobs:
@@ -22,7 +22,6 @@ jobs:
               sudo usermod -aG docker $USER
               docker build  -t $IMAGE_NAME ./sonarqube       
 
-      #CLI Login workaround
       - name: Install Azure cli
         run: |
           sudo apt-get install ca-certificates curl apt-transport-https lsb-release gnupg
@@ -79,7 +78,6 @@ jobs:
               --build-arg PYTHON_MODULE="wave-heroku/ai_app/app.py" \
               -t $IMAGE_NAME ./wave-heroku       
 
-      #CLI Login workaround
       - name: Install Azure cli
         run: |
           sudo apt-get install ca-certificates curl apt-transport-https lsb-release gnupg
@@ -94,10 +92,6 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }} 
 
-      # - name: Create container registry
-      #   run: |
-      #         az acr create --resource-group $RESOURCE_GROUP_NAME --name $CONTAINER_REG_NAME --sku Basic
-
       - name: Log in to container registry
         run: |
               az acr login --name $CONTAINER_REG_NAME
@@ -109,7 +103,3 @@ jobs:
       - name: Push the container image
         run: |
               docker push $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME:v3
-
-      # - name: Attach acr credentials #DOESN'T WORK FROM Here--> Only from Azure website UI!!!
-      #   run: |
-      #         az aks update -n $AKS_NAME -g $RESOURCE_GROUP_NAME --attach-acr $CONTAINER_REG_NAME
