--- a/.github/workflows/sonar-img-build.yml
+++ b/.github/workflows/sonar-img-build.yml
@@ -1,6 +1,6 @@
 #Configure The CI/CD Pipeline to automate the build/validate/deploy h2o-wave docker image steps.
 
-name: sonarqube-image build
+name: sonarqube image build
 on: workflow_dispatch
 
 jobs:
