--- a/.github/workflows/images-build-prod.yml
+++ b/.github/workflows/images-build-prod.yml
@@ -1,6 +1,6 @@
 #Configure The CI/CD Pipeline to automate the build/validate/deploy h2o-wave docker image steps.
 
-name: Sonarqube and H2o images build test
+name: Sonarqube and H2o images build prod
 on: workflow_dispatch
 
 jobs:
@@ -46,11 +46,11 @@ jobs:
       
       - name: Tag container image
         run: |
-              docker tag $IMAGE_NAME $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_test:v.1.0.0
+              docker tag $IMAGE_NAME $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_prod:v.1.0.0
 
       - name: Push the container image
         run: |
-              docker push $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_test:v.1.0.0
+              docker push $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_prod:v.1.0.0
 
       # - name: Attach acr credentials #DOESN'T WORK FROM Here--> Only from Azure website UI!!!
       #   run: |
@@ -98,8 +98,8 @@ jobs:
       
       - name: Tag container image
         run: |
-              docker tag $IMAGE_NAME $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_test:v.1.0.3
+              docker tag $IMAGE_NAME $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_prod:v.1.0.3
 
       - name: Push the container image
         run: |
-              docker push $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_test:v.1.0.3
+              docker push $CONTAINER_REG_NAME.azurecr.io/$IMAGE_NAME_prod:v1.0.3
