--- a/.github/workflows/run-deployment.yml
+++ b/.github/workflows/run-deployment.yml
@@ -11,7 +11,7 @@ jobs:
       
       - name: run deployment yml file
         run: |
-              kubectl apply -f deployment/test-depl.yml
+              kubectl apply -f deployment/aks-deployment-test.yml
         
       
       - name: get public IP 
