production environment update

--- a/.github/workflows/images-build.yml
+++ b/.github/workflows/images-build.yml
@@ -1,6 +1,6 @@
 #Configure The CI/CD Pipeline to automate the build/validate/deploy h2o-wave docker image steps.
 
-name: Sonarqube and H2o images build
+name: Sonarqube and H2o images build prod
 on: workflow_dispatch
 
 jobs:
